Added boiler configuration, automated network device instantination

--- a/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
+++ b/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
@@ -60,7 +60,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Toggle" />
+                    android:text="CCX001_ControlOut" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Value" />
+                    android:text="CCX001_Input2" />
 
                 <TextView
                     android:layout_width="wrap_content"
