--- a/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
+++ b/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
@@ -1,92 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f6f6f6"
+    android:padding="16dp"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingBottom="4dp">
+    <android.support.v7.widget.CardView
+        android:id="@+id/CardView"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        app:contentPadding="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#e6e6e6"
-            android:elevation="4dp"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/Image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/boiler" />
 
             <TextView
-                android:id="@+id/BoilerName"
+                android:id="@+id/Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#444"
-                tools:text="BoilerName" />
-
-            <TextView
-                android:id="@+id/Position"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textAlignment="center"
+                android:layout_marginTop="8dp"
                 android:textColor="#000"
-                tools:text="BoilerPosition" />
-        </LinearLayout>
-    </FrameLayout>
-
-    <me.itangqi.waveloadingview.WaveLoadingView
-        android:id="@+id/WaveView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="8dp"
-        app:wlv_borderColor="#2f2f2f"
-        app:wlv_borderWidth="7dp"
-        app:wlv_progressValue="33"
-        app:wlv_round_rectangle="true"
-        app:wlv_shapeType="rectangle"
-        app:wlv_waveAmplitude="50"
-        app:wlv_waveColor="#176bfd"
-        tools:managedTypeName="WaveLoadingControl" />
-
-    <LinearLayout
-        android:id="@+id/PropertiesListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="8dp" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingTop="4dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#d6d6d6"
-            android:elevation="4dp"
-            android:paddingBottom="4dp"
-            android:paddingEnd="8dp"
-            android:paddingTop="4dp">
+                android:textSize="24dp"
+                tools:text="Boiler 1" />
 
             <TextView
+                android:id="@+id/Status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:drawableEnd="@drawable/icon_arrow_right"
-                android:drawableTint="#262626"
-                android:gravity="center"
-                android:text="Tap to see details"
-                android:textColor="#262626" />
+                android:fontFamily="@string/font_family_light"
+                tools:text="All OK"
+                tools:textColor="#98c926" />
 
-        </FrameLayout>
-    </FrameLayout>
-</LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
+</FrameLayout>
