--- a/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
+++ b/CrossHMI/CrossHMI.Android/Resources/layout/dashboard_boiler_item.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f6f6f6"
     android:padding="16dp"
+    android:clipToPadding="false"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -13,6 +14,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         app:contentPadding="16dp"
+        android:clipToPadding="false"
         android:clickable="true"
         android:focusable="true"
         android:layout_height="wrap_content">
@@ -35,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColor="#000"
-                android:textSize="24dp"
+                android:textSize="@dimen/FontSizeBig"
                 tools:text="Boiler 1" />
 
             <TextView
