--- a/CrossHMI/CrossHMI.Android/Resources/layout/boiler_details_page.xml
+++ b/CrossHMI/CrossHMI.Android/Resources/layout/boiler_details_page.xml
@@ -86,18 +86,31 @@
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
 
-                    <me.itangqi.waveloadingview.WaveLoadingView
-                        android:id="@+id/WaveViewUpper"
+                    <FrameLayout
                         android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:wlv_borderColor="#2f2f2f"
-                        app:wlv_borderWidth="7dp"
-                        app:wlv_progressValue="33"
-                        app:wlv_round_rectangle="true"
-                        app:wlv_shapeType="rectangle"
-                        app:wlv_waveAmplitude="50"
-                        app:wlv_waveColor="#176bfd"
-                        tools:managedTypeName="WaveLoadingControl" />
+                        android:layout_height="100dp">
+                        <me.itangqi.waveloadingview.WaveLoadingView
+                            android:id="@+id/WaveViewUpper"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            app:wlv_borderColor="#2f2f2f"
+                            app:wlv_borderWidth="7dp"
+                            app:wlv_wave_background_Color="#e6e6e6"
+                            app:wlv_progressValue="33"
+                            app:wlv_round_rectangle="true"
+                            app:wlv_shapeType="rectangle"
+                            app:wlv_waveAmplitude="50"
+                            app:wlv_waveColor="#176bfd"
+                            tools:managedTypeName="WaveLoadingControl" />
+
+                        <TextView
+                            android:id="@+id/WaveViewUpperLabel"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="50%" />
+                    </FrameLayout>
+
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -117,9 +130,9 @@
                     <ProgressBar
                         android:id="@+id/OutputPipeProgressBar"
                         style="@style/ProgressBarVertical"
-                        android:max="1000"
                         android:layout_width="12dip"
                         android:layout_height="100dp"
+                        android:max="1000"
                         android:progress="55"
                         android:progressTint="#00a6ff" />
 
@@ -154,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".75" />
+                app:layout_constraintGuide_percent=".76" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/_LSetPointGuidelineVertical"
@@ -168,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".52" />
+                app:layout_constraintGuide_percent=".53" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/_ValveInputGuidelineVertical"
@@ -182,7 +195,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".99" />
+                app:layout_constraintGuide_percent=".995" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/_FTMeasurementGuidelineVertical"
@@ -196,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".88" />
+                app:layout_constraintGuide_percent=".86" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/_WaveViewGuidelineVertical"
@@ -217,14 +230,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".62" />
+                app:layout_constraintGuide_percent=".61" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/_WaveViewGuidelineHorizontalEnd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent=".95" />
+                app:layout_constraintGuide_percent=".93" />
 
 
             <!--endregion-->
@@ -301,6 +314,17 @@
                 app:wlv_waveAmplitude="50"
                 app:wlv_waveColor="#176bfd"
                 tools:managedTypeName="WaveLoadingControl" />
+
+            <TextView
+                android:id="@+id/WaveViewLabel"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center"
+                android:text="50%"
+                app:layout_constraintBottom_toTopOf="@id/_WaveViewGuidelineHorizontalEnd"
+                app:layout_constraintLeft_toRightOf="@id/_WaveViewGuidelineVertical"
+                app:layout_constraintRight_toLeftOf="@id/_WaveViewGuidelineVerticalEnd"
+                app:layout_constraintTop_toBottomOf="@id/_WaveViewGuidelineHorizontal" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -396,13 +420,43 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:paddingBottom="4dp">
+            android:paddingBottom="2dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#e6e6e6"
-                android:elevation="4dp"
+                android:elevation="2dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Notes"
+                    android:textColor="#444" />
+            </LinearLayout>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/BoilerNotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textColor="#000"
+            tools:text="Notes" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:paddingBottom="2dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#e6e6e6"
+                android:elevation="2dp"
                 android:orientation="horizontal"
                 android:padding="8dp">
 
